# liangda-health

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
backend/: README.md  dev.db  requirements.txt
backend/app/: main.py
backend/scripts/: scrape_fu800_mall_images.py  verify_agent_chat.py  verify_agent_chat_stream.py  verify_agent_chat_with_report.py  verify_real_services.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_response_schema.py  test_agent_service.py  test_agent_tools.py  test_api_device.py  test_api_health_analysis.py  test_api_kb.py  test_api_mall.py  test_api_members.py  test_api_notice.py  test_chunker.py  test_e2e_member_isolation.py  test_e2e_text_pdf.py  test_embedding.py  test_health_fact_extractor.py  test_health_fact_repository.py  test_health_fact_tasks.py  test_health_profile_service.py  test_kb_repository.py  test_kb_service.py  test_langchain_agent.py  test_meal_plan_service.py  test_meal_product_recommendation_service.py  test_mem0_integration.py  test_memory_service.py  test_metadata.py  test_migrate_kb_member_binding.py  test_models_kb.py  test_scrape_fu800_mall_images.py  (+1 more)
docs/: ai-competition-technical-solution.md  harness_engineering_arch.md  iteration-roadmap_already_completed.md  liangda-health-iteration-roadmap.md  liangda-health-market-roadmap.md  recommendation_engineering_arch.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+219 files in other folders)
